--- a/plugins/positioning/positioningwidget.ui
+++ b/plugins/positioning/positioningwidget.ui
@@ -10,7 +10,7 @@
     <height>300</height>
    </rect>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QVBoxLayout" name="topLayout">
    <item>
     <widget class="QCheckBox" name="overrideBox">
      <property name="text">
@@ -79,6 +79,32 @@
       </widget>
      </item>
      <item>
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Al&amp;titude:</string>
+       </property>
+       <property name="buddy">
+        <cstring>altitudeBox</cstring>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QSpinBox" name="altitudeBox">
+       <property name="suffix">
+        <string>m</string>
+       </property>
+       <property name="minimum">
+        <number>-500</number>
+       </property>
+       <property name="maximum">
+        <number>10000</number>
+       </property>
+       <property name="singleStep">
+        <number>50</number>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -92,19 +118,6 @@
       </spacer>
      </item>
     </layout>
-   </item>
-   <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>222</height>
-      </size>
-     </property>
-    </spacer>
    </item>
   </layout>
  </widget>
