Improve the position marker, and show the current direction on the map.

--- a/plugins/positioning/positioningwidget.qrc
+++ b/plugins/positioning/positioningwidget.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="gammaray/positioning">
     <file>mapview.qml</file>
+    <file>direction_marker.png</file>
   </qresource>
 </RCC>
