Allow longitude and direction to wrap around.

--- a/plugins/positioning/positioningwidget.ui
+++ b/plugins/positioning/positioningwidget.ui
@@ -147,6 +147,9 @@
      </item>
      <item row="2" column="1">
       <widget class="QSpinBox" name="direction">
+       <property name="wrapping">
+        <bool>true</bool>
+       </property>
        <property name="suffix">
         <string>°</string>
        </property>
@@ -222,6 +225,9 @@
      </item>
      <item row="0" column="3">
       <widget class="QDoubleSpinBox" name="longitude">
+       <property name="wrapping">
+        <bool>true</bool>
+       </property>
        <property name="suffix">
         <string>°</string>
        </property>
