--- a/plugins/widgetinspector/assets.qrc
+++ b/plugins/widgetinspector/assets.qrc
@@ -3,6 +3,7 @@
         <file>assets/qml/main.qml</file>
         <file>assets/qml/WidgetMaterial.qml</file>
         <file>assets/qml/WidgetDelegate.qml</file>
+        <file>assets/qml/WidgetInfo.qml</file>
         <file>assets/qml/CameraController.qml</file>
         <file>assets/shaders/widget.vert</file>
         <file>assets/shaders/widget.frag</file>
