--- a/plugins/translatorinspector/translatorinspectorwidget.ui
+++ b/plugins/translatorinspector/translatorinspectorwidget.ui
@@ -34,6 +34,9 @@
        </item>
        <item>
         <widget class="GammaRay::DeferredTreeView" name="translationsView">
+         <property name="contextMenuPolicy">
+          <enum>Qt::CustomContextMenu</enum>
+         </property>
          <property name="selectionMode">
           <enum>QAbstractItemView::ContiguousSelection</enum>
          </property>
@@ -42,25 +45,33 @@
          </property>
         </widget>
        </item>
-       <item>
-        <widget class="QPushButton" name="resetTranslationsButton">
-         <property name="text">
-          <string>Reset selected</string>
-         </property>
-        </widget>
-       </item>
       </layout>
      </widget>
     </widget>
    </item>
-   <item>
-    <widget class="QPushButton" name="languageChangeButton">
-     <property name="text">
-      <string>Send QEvent::LanguageChange</string>
-     </property>
-    </widget>
-   </item>
   </layout>
+  <action name="actionReset">
+   <property name="icon">
+    <iconset theme="edit-undo"/>
+   </property>
+   <property name="text">
+    <string>Reset Selected Translations</string>
+   </property>
+   <property name="toolTip">
+    <string>Reset manually changed translations back to their original content.</string>
+   </property>
+  </action>
+  <action name="actionSendLanguageChange">
+   <property name="icon">
+    <iconset theme="view-refresh"/>
+   </property>
+   <property name="text">
+    <string>Send LanguageChange Event</string>
+   </property>
+   <property name="toolTip">
+    <string>Sends a QEvent::LanguageChange event to the application to reload changed translations.</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
