Redesign the widget hierarchy representation
The Widget3DModel running on the server side now returns a tree
from ObjectTreeModel enriched by textures and some other metadata.

On client side we have several proxy models: one that extracts
windows (QWidget::isWindow() == true) and second one that only
displays flattened widget subtree of selected window.

This allows us to represent windows hierarchies separately from
widget hierarchies, allowing for better handling of dialogs etc.

We sometimes hit asserts in KDescendatsProxyModel, when too many
things change at once (like switching tabs in configuration dialogs),
that still has to be investigated. I will probably extend the
Widget3DSubtreeModel to also do the flattening since we can do
many assumptions that the generic KDescendatsProxyModel can't.

--- a/plugins/widgetinspector/widgetinspectorwidget.ui
+++ b/plugins/widgetinspector/widgetinspectorwidget.ui
@@ -33,7 +33,7 @@
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
-             <widget class="QWidget" name="">
+             <widget class="QWidget" name="layoutWidget">
               <layout class="QVBoxLayout" name="verticalLayout_2">
                <item>
                 <widget class="QLineEdit" name="widgetSearchLine"/>
