Add outbound object navigation for Wayland clients

--- a/plugins/wlcompositorinspector/inspectorwidget.ui
+++ b/plugins/wlcompositorinspector/inspectorwidget.ui
@@ -27,6 +27,9 @@
    </item>
    <item row="0" column="0">
     <widget class="QTreeView" name="clientsView">
+     <property name="contextMenuPolicy">
+      <enum>Qt::CustomContextMenu</enum>
+     </property>
      <property name="selectionBehavior">
       <enum>QAbstractItemView::SelectRows</enum>
      </property>
