--- a/plugins/widgetinspector/assets.qrc
+++ b/plugins/widgetinspector/assets.qrc
@@ -7,7 +7,9 @@
         <file>assets/qml/CameraController.qml</file>
         <file>assets/shaders/widget.vert</file>
         <file>assets/shaders/widget.frag</file>
-        <file>assets/shaders/widget.geom</file>
+        <file>assets/shaders/widget_wireframe.vert</file>
+        <file>assets/shaders/widget_wireframe.geom</file>
+        <file>assets/shaders/widget_wireframe.frag</file>
         <file>assets/shaders/horizontal.vert</file>
         <file>assets/shaders/horizontal.geom</file>
         <file>assets/shaders/horizontal.frag</file>
