--- a/plugins/widgetinspector/assets.qrc
+++ b/plugins/widgetinspector/assets.qrc
@@ -6,6 +6,7 @@
         <file>assets/qml/WidgetDelegate.qml</file>
         <file>assets/qml/WidgetInfo.qml</file>
         <file>assets/qml/CameraController.qml</file>
+        <file>assets/qml/CheckBox.qml</file>
         <file>assets/shaders/widget.vert</file>
         <file>assets/shaders/widget.frag</file>
         <file>assets/shaders/widget_wireframe.vert</file>
