Move assets to "gammaray" namespace

--- a/plugins/widgetinspector/assets.qrc
+++ b/plugins/widgetinspector/assets.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/">
+    <qresource prefix="/gammaray">
         <file>assets/qml/main.qml</file>
         <file>assets/qml/Horizontals.qml</file>
         <file>assets/qml/WidgetMaterial.qml</file>
