--- a/docs/manual/style/kdab-online.css
+++ b/docs/manual/style/kdab-online.css
@@ -58,7 +58,15 @@ div.sidebar li:before {
     left: 1em;
 }
 .sectionlist:last-child::after {
-    display: none;
+    background-image: url("gammaray-logo-256.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    border-width: 0;
+    width: 100%;
+    height: 256px;
+    bottom: 1em;
+    left: 0;
 }
 
 /* navigation breadcrumb at the top */
