--- a/docs/manual/style/kdab-online.css
+++ b/docs/manual/style/kdab-online.css
@@ -18,6 +18,11 @@ div.sidebar {
 div.sidebar ul {
     list-style: none;
     padding-left: 1.3em;
+    margin-top: 0px; /** Site style has a way too big 50py here. */
+}
+
+div.sidebar h2, div.sidebar h3 {
+    margin-bottom: 0.5em;
 }
 
 div.sidebar li:before {
