--- a/docs/manual/style/kdab-online.css
+++ b/docs/manual/style/kdab-online.css
@@ -36,7 +36,7 @@ div.sidebar li:before {
 
 .toc,.sectionlist {
     padding: 1em;
-    background-color: #eee;
+    background-color: #eef2f4;
     margin-bottom: 3em
 }
 .toc:after {
@@ -44,7 +44,7 @@ div.sidebar li:before {
     position: relative;
     border-style: solid;
     border-width: 0 0 3em 3em;
-    border-color: transparent #eee;
+    border-color: transparent #eef2f4;
     display: block;
     width: 0%;
     bottom: -3em;
@@ -56,7 +56,7 @@ div.sidebar li:before {
     position: relative;
     border-style: solid;
     border-width: 0 3em 3em 0;
-    border-color: transparent #eee;
+    border-color: transparent #eef2f4;
     display: block;
     width: 100%;
     bottom: -3em;
@@ -159,7 +159,7 @@ table thead {
   padding-left:20px
 }
 table,table td,table th {
-  border:1px solid #eee
+  border:1px solid #eef2f4
 }
 table td,table th {
   padding:5px 20px;
