Set default icons for recently added remote view features
This need to be reworked later by designers.

--- a/plugins/quickinspector/resources/quickinspector.qrc
+++ b/plugins/quickinspector/resources/quickinspector.qrc
@@ -3,6 +3,8 @@
     <file>focus.png</file>
     <file>warning.png</file>
     <file>legend.png</file>
+    <file>grid-settings.png</file>
+    <file>decorations.png</file>
     <file>active-focus.png</file>
     <file>visualize-clipping.png</file>
     <file>visualize-overdraw.png</file>
