--- a/ui/resources/ui.qrc
+++ b/ui/resources/ui.qrc
@@ -6,5 +6,6 @@
     <file>pick-element.png</file>
     <file>zoom-in.png</file>
     <file>zoom-out.png</file>
+    <file>traces.png</file>
   </qresource>
 </RCC>
