Move the components traces to the visualize toolbar group

--- a/plugins/quickinspector/resources/quickinspector.qrc
+++ b/plugins/quickinspector/resources/quickinspector.qrc
@@ -10,5 +10,6 @@
     <file>visualize-overdraw.png</file>
     <file>visualize-batches.png</file>
     <file>visualize-changes.png</file>
+    <file>visualize-traces.png</file>
   </qresource>
 </RCC>
