--- a/ui/resources/ui.qrc
+++ b/ui/resources/ui.qrc
@@ -36,6 +36,38 @@
         <file>gammaray/icons/ui/light/zoom-in.png</file>
         <file>gammaray/icons/ui/light/zoom-out.png</file>
 
+        <!-- UI icons @2x -->
+        <file>gammaray/icons/ui/light/grid-settings@2x.png</file>
+        <file>gammaray/icons/ui/light/legend@2x.png</file>
+        <file>gammaray/icons/ui/light/measure-pixels@2x.png</file>
+        <file>gammaray/icons/ui/light/move-preview@2x.png</file>
+        <file>gammaray/icons/ui/light/pick-element@2x.png</file>
+        <file>gammaray/icons/ui/light/redirect-input@2x.png</file>
+        <file>gammaray/icons/ui/light/server-decorations@2x.png</file>
+        <file>gammaray/icons/ui/light/visualize-batches@2x.png</file>
+        <file>gammaray/icons/ui/light/visualize-changes@2x.png</file>
+        <file>gammaray/icons/ui/light/visualize-clipping@2x.png</file>
+        <file>gammaray/icons/ui/light/visualize-overdraw@2x.png</file>
+        <file>gammaray/icons/ui/light/visualize-traces@2x.png</file>
+        <file>gammaray/icons/ui/light/zoom-in@2x.png</file>
+        <file>gammaray/icons/ui/light/zoom-out@2x.png</file>
+
+        <!-- UI icons @3x -->
+        <file>gammaray/icons/ui/light/grid-settings@3x.png</file>
+        <file>gammaray/icons/ui/light/legend@3x.png</file>
+        <file>gammaray/icons/ui/light/measure-pixels@3x.png</file>
+        <file>gammaray/icons/ui/light/move-preview@3x.png</file>
+        <file>gammaray/icons/ui/light/pick-element@3x.png</file>
+        <file>gammaray/icons/ui/light/redirect-input@3x.png</file>
+        <file>gammaray/icons/ui/light/server-decorations@3x.png</file>
+        <file>gammaray/icons/ui/light/visualize-batches@3x.png</file>
+        <file>gammaray/icons/ui/light/visualize-changes@3x.png</file>
+        <file>gammaray/icons/ui/light/visualize-clipping@3x.png</file>
+        <file>gammaray/icons/ui/light/visualize-overdraw@3x.png</file>
+        <file>gammaray/icons/ui/light/visualize-traces@3x.png</file>
+        <file>gammaray/icons/ui/light/zoom-in@3x.png</file>
+        <file>gammaray/icons/ui/light/zoom-out@3x.png</file>
+
         <!-- Dark icons -->
 
         <!-- UI icons -->
@@ -53,6 +85,38 @@
         <file>gammaray/icons/ui/dark/visualize-traces.png</file>
         <file>gammaray/icons/ui/dark/zoom-in.png</file>
         <file>gammaray/icons/ui/dark/zoom-out.png</file>
+
+        <!-- UI icons @2x -->
+        <file>gammaray/icons/ui/dark/grid-settings@2x.png</file>
+        <file>gammaray/icons/ui/dark/legend@2x.png</file>
+        <file>gammaray/icons/ui/dark/measure-pixels@2x.png</file>
+        <file>gammaray/icons/ui/dark/move-preview@2x.png</file>
+        <file>gammaray/icons/ui/dark/pick-element@2x.png</file>
+        <file>gammaray/icons/ui/dark/redirect-input@2x.png</file>
+        <file>gammaray/icons/ui/dark/server-decorations@2x.png</file>
+        <file>gammaray/icons/ui/dark/visualize-batches@2x.png</file>
+        <file>gammaray/icons/ui/dark/visualize-changes@2x.png</file>
+        <file>gammaray/icons/ui/dark/visualize-clipping@2x.png</file>
+        <file>gammaray/icons/ui/dark/visualize-overdraw@2x.png</file>
+        <file>gammaray/icons/ui/dark/visualize-traces@2x.png</file>
+        <file>gammaray/icons/ui/dark/zoom-in@2x.png</file>
+        <file>gammaray/icons/ui/dark/zoom-out@2x.png</file>
+
+        <!-- UI icons @3x -->
+        <file>gammaray/icons/ui/dark/grid-settings@3x.png</file>
+        <file>gammaray/icons/ui/dark/legend@3x.png</file>
+        <file>gammaray/icons/ui/dark/measure-pixels@3x.png</file>
+        <file>gammaray/icons/ui/dark/move-preview@3x.png</file>
+        <file>gammaray/icons/ui/dark/pick-element@3x.png</file>
+        <file>gammaray/icons/ui/dark/redirect-input@3x.png</file>
+        <file>gammaray/icons/ui/dark/server-decorations@3x.png</file>
+        <file>gammaray/icons/ui/dark/visualize-batches@3x.png</file>
+        <file>gammaray/icons/ui/dark/visualize-changes@3x.png</file>
+        <file>gammaray/icons/ui/dark/visualize-clipping@3x.png</file>
+        <file>gammaray/icons/ui/dark/visualize-overdraw@3x.png</file>
+        <file>gammaray/icons/ui/dark/visualize-traces@3x.png</file>
+        <file>gammaray/icons/ui/dark/zoom-in@3x.png</file>
+        <file>gammaray/icons/ui/dark/zoom-out@3x.png</file>
 
         <!-- QtQuick 2 class icons -->
         <file alias="gammaray/icons/ui/classes/QQuickBorderImage/default.png">gammaray/icons/ui/classes/qtquick2/border-image-icon16.png</file>
