Show timezone offset data too

--- a/plugins/localeinspector/timezonetab.ui
+++ b/plugins/localeinspector/timezonetab.ui
@@ -10,18 +10,37 @@
     <height>300</height>
    </rect>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
-    <widget class="QLineEdit" name="tzSearchLine"/>
-   </item>
-   <item>
-    <widget class="QTreeView" name="tzView">
-     <property name="rootIsDecorated">
-      <bool>false</bool>
+    <widget class="QSplitter" name="splitter">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
-     <property name="uniformRowHeights">
-      <bool>true</bool>
-     </property>
+     <widget class="QWidget" name="layoutWidget">
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QLineEdit" name="tzSearchLine"/>
+       </item>
+       <item>
+        <widget class="QTreeView" name="tzView">
+         <property name="rootIsDecorated">
+          <bool>false</bool>
+         </property>
+         <property name="uniformRowHeights">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QTreeView" name="offsetView">
+      <property name="rootIsDecorated">
+       <bool>false</bool>
+      </property>
+      <property name="uniformRowHeights">
+       <bool>true</bool>
+      </property>
+     </widget>
     </widget>
    </item>
   </layout>
