Make sure the feedback system is not used in in-process mode

--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -229,6 +229,9 @@ background-position:bottom right;
    </property>
   </action>
   <action name="actionContribute">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>&amp;Contribute...</string>
    </property>
