--- a/plugins/quickinspector/gridsettingswidget.ui
+++ b/plugins/quickinspector/gridsettingswidget.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>GridSettingsWidget</class>
- <widget class="QWidget" name="GridSettingsWidget">
+ <class>GammaRay::GridSettingsWidget</class>
+ <widget class="QWidget" name="GammaRay::GridSettingsWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
