--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -91,7 +91,7 @@ background-position:bottom right;
      <x>0</x>
      <y>0</y>
      <width>829</width>
-     <height>39</height>
+     <height>30</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_GammaRay">
@@ -156,6 +156,8 @@ background-position:bottom right;
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
+  </widget>
+  <widget class="QStatusBar" name="statusBar">
   </widget>
   <action name="actionRetractProbe">
    <property name="text">
