Add unit test for image and DF texture grabbing

--- a/tests/quickinspectortest.qrc
+++ b/tests/quickinspectortest.qrc
@@ -2,5 +2,7 @@
   <qresource prefix="/">
     <file>manual/reparenttest.qml</file>
     <file>manual/quickitemcreatedestroytest.qml</file>
+    <file>manual/textures.qml</file>
+    <file>manual/lsd.png</file>
   </qresource>
 </RCC>
